# calculadora_cli

./: README.md  pyproject.toml
calculadora_cli/: main.py
