[tool.poetry]
name = "calculadora-cli"
version = "0.1.0"
description = ""
authors = ["devid <nnick4673@gmail.com>"]
readme = "README.md"
packages = [{include = "calculadora_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
